--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,17 @@
+body {
+  background-color1: black;
+  color1: white;
+}
 
+h1 {
+  font-size: 20px;
+}
+
+p {
+  font-size: 12px;
+  color: green;
+}
+
+//Set div-element border to dotted and 2 pixels wide, set element width and height to 100 pixels. Use class selector.
+Replace ordered list numbers with letters.
+Replace unordered list dots with squares.
