--- a/css/styles.css
+++ b/css/styles.css
@@ -13,5 +13,5 @@ p {
 }
 
 //Set div-element border to dotted and 2 pixels wide, set element width and height to 100 pixels. Use class selector.
-Replace ordered list numbers with letters.
-Replace unordered list dots with squares.
+//Replace ordered list numbers with letters.
+//Replace unordered list dots with squares.
