--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-  background-color1: black;
-  color1: white;
+  background-color: black;
+  color: white;
 }
 
 h1 {
@@ -15,12 +15,11 @@ p {
 .div {
   border-style: dotted;
   margin: 2px;
-  border-width: 100px;
-  border-height: 100px;
+  border: 100px;
 }
 
 ol {
-  list-style-type: lower alpha;
+  list-style-type: lower-alpha;
 }
 
 ul {
