--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,10 @@
 body {
-  background-color: rgb(250, 242, 40);
-  color:Black;
+  background-color: rgb(0, 0, 0);
+  color:White;
 }
 
 h1 {
   font-size: 20px;
-  border-style: dotted;
-  border-radius: 15px;
 }
 
 h2 {
@@ -19,8 +17,7 @@ h2 {
 
 p {
   font-size: 12px;
-  background-color: rgb(25, 255, 71);
-  color:Black;
+  color:Green;
 }
 
 .div {
