--- a/third.css
+++ b/third.css
@@ -1,1 +1,39 @@
+body {
+  background-color: rgb(250, 242, 40, 0.6);
+}
 
+h1 {
+  font-size: 50px;
+  color: Grey;
+  border-style: solid;
+  border-radius: 15px;
+  border-color: Grey;
+}
+
+h2 {
+  font-size: 20px;
+  border-style: dotted;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 20px;
+}
+
+p {
+  font-size: 20px;
+  background-color: rgb(25, 255, 71, 0.5);
+  color:Black;
+}
+
+.div {
+  border-style: dotted;
+  margin: 2px;
+  border: 100px;
+}
+
+ol {
+  list-style-type: lower-alpha;
+}
+
+ul {
+  list-style-type: square;
+}
