--- a/third.css
+++ b/third.css
@@ -26,7 +26,7 @@ p {
   font-size: 20px;
   color:Black;
   margin:10px;
-  padding:50px 20 px;
+  padding:50px 20px;
 }
 
 nav {
@@ -56,7 +56,7 @@ article {
   padding: 20px;
   width: 70%;
   background-color: #255;
-  margin;10px;
+  margin:10px;
 }
 
 section:after {
