--- a/10B/styletable.css
+++ b/10B/styletable.css
@@ -1,1 +1,36 @@
+table, tr, th, td {
+  border: 1px solid black;
+  background-color: grey;
+  color: white;
+  width: 70%;
+  margin: 5px;
+  text-align:center;
+}
 
+form {
+	font-family: Arial, Helvetica, sans-serif;
+    padding: 15px 20px;
+    margin: 10px 0;
+    box-sizing: border-box;
+}
+
+textarea {
+	background-color:#c88064;
+    color:#0b1015;
+    border-radius: 4px;
+}
+
+input[type=checkbox] {
+	margin: 15px;
+}
+
+input[type=submit] {
+	margin: 20px;
+    background-color: green;
+}
+
+select {
+	margin: 20px;
+    background-color: #d4514c;
+    color:#e4e7ea;
+}
