--- a/stylesheet.css
+++ b/stylesheet.css
@@ -194,7 +194,10 @@ footer {
 }
 
 .carousel-img {
-  width: 100%;  
+  width: 75%; 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .carousel-caption {
