--- a/stylesheet.css
+++ b/stylesheet.css
@@ -200,6 +200,14 @@ footer {
   margin-right: auto;
 }
 
+.video {
+  width: 75%; 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .carousel-caption {
   position: absolute;
   left: 0;
